syntax = "proto3";

option go_package = "github.com/overseven/blockchain/protocol/common";

package pcommon;

import "google/protobuf/timestamp.proto";


message TransAirDrop{
    bytes receiver = 1;
    double pay = 2;
    double fee = 3;
    string message = 4;
    google.protobuf.Timestamp timestamp = 5;
    bytes node = 6;
    bytes sign = 7;
  }
  
  message TransTransfer{
    bytes sender = 1;
    bytes receiver = 2;
    double pay = 3;
    double fee = 4;
    string message = 5;
    google.protobuf.Timestamp timestamp = 6;
    bytes node = 7;
    bytes sign = 8;
  }
  
  message Transaction{
      uint32 protocolVersion = 1;
      oneof trans{
        TransTransfer transfer = 3;
        TransAirDrop drop = 4;
      }
  }
  
  message Block{
      uint32 protocolVersion = 1;
      uint64 blockId = 2;
      repeated Transaction trans = 3;
      bytes prevBlockHash = 4;
      uint32 difficulty = 5;
      bytes miner = 6;
      bytes blockHash = 7;
      bytes nonce = 8;
  }
  
  